Added http obserable injectable service. Created basic html template.

--- a/frontend/recommend-fe/src/app/main/main.component.html
+++ b/frontend/recommend-fe/src/app/main/main.component.html
@@ -1,1 +1,40 @@
-<p>main works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm">
+            <mat-card>
+                <mat-card-title>
+                    Preferred Bands:
+                </mat-card-title>
+                <mat-card-content>
+                </mat-card-content>
+            </mat-card>
+        </div>
+        <div class="col-sm">
+            <mat-card>
+                <mat-card-title>
+                    Items used:
+                </mat-card-title>
+                <mat-card-content>
+                </mat-card-content>
+            </mat-card>
+        </div>
+        <div class="col-sm">
+            <mat-card>
+                <mat-card-title>
+                    Recommended Bands:
+                </mat-card-title>
+                <mat-card-content>
+                </mat-card-content>
+            </mat-card>
+        </div>
+        <div class="col-sm">
+            <mat-card>
+                <mat-card-title>
+                    Band Name
+                </mat-card-title>
+                <mat-card-content>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
+</div>
